--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mpociot/laravel-apidoc-generator",
+    "name": "twitchalerts/laravel-apidoc-generator",
     "license": "MIT",
     "description": "Generate beautiful API documentation from your Laravel application",
     "keywords": [
@@ -7,30 +7,33 @@
         "Documentation",
         "Laravel"
     ],
-    "homepage": "http://github.com/mpociot/laravel-apidoc-generator",
     "authors": [
         {
             "name": "Marcel Pociot",
             "email": "m.pociot@gmail.com"
+        },
+        {
+            "name": "Igor Moraes",
+            "email": "igor.sgm@gmail.com"
         }
     ],
     "require": {
-        "php": ">=7.2.0",
+        "php": ">=5.5.9",
         "ext-json": "*",
         "fzaninotto/faker": "^1.8",
-        "illuminate/console": "^5.7|^6.0|^7.0",
-        "illuminate/routing": "^5.7|^6.0|^7.0",
-        "illuminate/support": "^5.7|^6.0|^7.0",
+        "illuminate/console": "^5.2|^6.0|^7.0",
+        "illuminate/routing": "^5.2|^6.0|^7.0",
+        "illuminate/support": "^5.2|^6.0|^7.0",
         "league/flysystem": "^1.0",
         "mpociot/documentarian": "^0.4.0",
         "mpociot/reflection-docblock": "^1.0.1",
-        "nunomaduro/collision": "^3.0|^4.0",
+        "nunomaduro/collision": "^2.0|^3.0|^4.0",
         "ramsey/uuid": "^3.8|^4.0",
         "symfony/var-exporter": "^4.0|^5.0"
     },
     "require-dev": {
         "dms/phpunit-arraysubset-asserts": "^0.1.0",
-        "laravel/lumen-framework": "^5.7|^6.0|^7.0",
+        "laravel/lumen-framework": "^5.2|^6.0|^7.0",
         "league/fractal": "^0.19.0",
         "orchestra/testbench": "^3.7|^4.0|^5.0",
         "phpstan/phpstan": "^0.11.15",
@@ -67,5 +70,7 @@
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
